fix: correct errors